# horizon

./: .gitignore  .gitmodules  BPplan2.txt  CMakeLists.txt  Documectary.docx  Gui.h  Gui2.h  Gui3.h  Horizon Game Engine.docx  Ideas.txt  Notepad++.lnk  a.exe.lnk  camera.h  cmd.exe.lnk  codetostring.h  compile.bat  console.h  control.cpp  control.h  fonts.cpp  fonts.h  fonts.h.old  framereport_2.2.2019_13.51.38.txt  frtest.txt  g_info.txt  gdbinput.txt  globals.h  gmon.out  hook.h  input.h  keybinds.h  log.txt  log2.txt  main.cpp  makefile  makefile_old  makefile~  makeresult.txt  messanger.h  models.h  (+14 more)
VS/horizonApp/: CMakeLists.txt  horizonApp.vcxproj  horizonApp.vcxproj.filters
VS/horizonApp/code/include/experimental/: editor2.h  gui_editor.h  map_editor.h
VS/horizonApp/code/include/gadgets/: console.h  gui_filedialog.h  gui_table.h  gui_texturebrowser.h  picker.h
VS/horizonApp/code/include/game/: GUIwindows.h  commands.h  game.h
VS/horizonApp/code/include/main/: main.h
VS/horizonApp/code/include/util/: global_vars_app.h  paramList.h
VS/horizonApp/code/source/experimental/: editor2.cpp  gui_editor.cpp  map_editor.cpp
VS/horizonApp/code/source/gadgets/: console.cpp  gui_filedialog.cpp  gui_table.cpp  gui_texturebrowser.cpp  notificationbox.cpp  picker.cpp
VS/horizonApp/code/source/game/: GUIwindows.cpp  commands.cpp
VS/horizonApp/code/source/generators/: editmodel.cpp
VS/horizonApp/code/source/input/: keybinds.cpp
VS/horizonApp/code/source/main/: main.cpp
VS/horizonApp/code/source/resource/: model.cpp
VS/horizonApp/code/source/util/: global_vars_app.cpp  paramList.cpp
VS/horizonGUI/: CMakeLists.txt  horizonGUI.vcxproj  horizonGUI.vcxproj.filters
VS/horizonGUI/code/Ext/tinyXML2/: tinyxml2.cpp
VS/horizonGUI/code/GUI/: GUI_internal.cpp  GUI_property.cpp  GUI_types.cpp  GUIdropdownMenu.cpp  GUIgrid.cpp  GUIrenderer.cpp  GUItextentry.cpp
VS/horizonGUI/code/include/GUI/: GUI.h  GUI_internal.h  GUI_property.h  GUI_types.h  GUIbase.h  GUIbutton.h  GUIdropdownMenu.h  GUIframe.h  GUIgrid.h  GUIimage.h  GUIlabel.h  GUIrenderer.h  GUIrenderer_default.h  GUIscrollbar.h  GUIselectable.h  GUItextentry.h  GUIwindow.h
VS/horizonGUI/code/include/input/: input.h  keybinds.h
VS/horizonGUI/code/include/main/: main_gui.h
VS/horizonGUI/code/include/math/: geometry.h
VS/horizonGUI/code/include/program/: pipe.h
VS/horizonGUI/code/include/render/: paintHelper.h  render_gui.h
VS/horizonGUI/code/include/util/: elastic_ptr.h  global_vars_gui.h  globals_gui.h
VS/horizonGUI/code/main/: dllmain.cpp
VS/horizonGUI/code/math/: fancymath.cpp
VS/horizonGUI/code/program/: pipe.cpp
VS/horizonGUI/code/render/: paintHelper.cpp  render.cpp
VS/horizonGUI/code/resource/: resource.cpp
VS/horizonGUI/code/source/GUI/: GUI_internal.cpp  GUI_property.cpp  GUI_types.cpp  GUIbase.cpp  GUIbutton.cpp  GUIdropdownMenu.cpp  GUIframe.cpp  GUIgrid.cpp  GUIimage.cpp  GUIlabel.cpp  GUIrenderer.cpp  GUIrenderer_default.cpp  GUIscrollbar.cpp  GUIselectable.cpp  GUItextentry.cpp  GUIwindow.cpp
VS/horizonGUI/code/source/main/: dllmain_gui.cpp  main.cpp
VS/horizonGUI/code/source/math/: geometry.cpp  vec.cpp.old
VS/horizonGUI/code/source/program/: pipe.cpp
VS/horizonGUI/code/source/render/: paintHelper.cpp  renderCommand.cpp.old  render_gui.cpp  rmodel.cpp.old
VS/horizonGUI/code/source/util/: elastic_ptr.cpp  global_vars_gui.cpp
VS/horizonGUI/code/util/: global_vars_gui.cpp  hook.cpp  timer.cpp
VS/horizonGUI/include/: global_vars_gui.h
VS/horizonGUI/main/: dllmain.cpp
VS/horizonGUI/util/: global_vars_gui.h
VS/horizonProgram/: CMakeLists.txt  horizonProgram.vcxproj  horizonProgram.vcxproj.filters
VS/horizonProgram/code/include/input/: input.h  mouse.h
VS/horizonProgram/code/include/main/: main_program.h
VS/horizonProgram/code/include/program/: file.h  pipe.h  window.h
VS/horizonProgram/code/include/util/: global_vars_program.h  globals_program.h
VS/horizonProgram/code/source/input/: input.cpp  mouse.cpp
VS/horizonProgram/code/source/main/: dllmain_program.cpp  main.cpp
VS/horizonProgram/code/source/program/: file.cpp  file.cpp.bak  pipe.cpp  window.cpp  window.cpp.bak
VS/horizonProgram/code/source/util/: global_vars_program.cpp
VS/horizonRender/: CMakeLists.txt  GPUdriver.cpp  GPUdriver.h  GPUdriverOpenGLCommands.cpp  bitmap.h  camera.h  debug.cpp  debug.h  file.cpp  file.h  global_vars.cpp  global_vars.h  globals.h  horizonRender.vcxproj  horizonRender.vcxproj.filters  model.h  paint.cpp  paint.h  printw.cpp  printw.h  render.cpp  render.h  renderCommand.cpp  renderCommand.h  renderLayer.cpp  renderLayer.h  renderLow.cpp  renderLow.h  rmodel.cpp  rmodel.h  simplemath.cpp  stringUtils.cpp  stringUtils.h  texture.h  textureLoader.h  vec.cpp  vec.h  window.cpp  window.h
VS/horizonRender/Debug/: CodeAnalysisResultManifest.txt  GPUdriver.nativecodeanalysis.sarif  dllmain.nativecodeanalysis.sarif  file.nativecodeanalysis.sarif  horizonRender.dll.recipe  horizonRender.ilk  paint.nativecodeanalysis.sarif  printw.nativecodeanalysis.sarif  render.nativecodeanalysis.sarif  renderCommand.nativecodeanalysis.sarif  renderLayer.nativecodeanalysis.sarif  renderLow.nativecodeanalysis.sarif  rmodel.nativecodeanalysis.sarif  simplemath.nativecodeanalysis.sarif  stringUtils.nativecodeanalysis.sarif  texture.nativecodeanalysis.sarif  vc142.idb  vec.nativecodeanalysis.sarif  window.nativecodeanalysis.sarif
VS/horizonRender/Debug/horizonRender.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  horizonRender.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
VS/horizonRender/code/include/generators/: editmodel.h
VS/horizonRender/code/include/input/: mouse.h
VS/horizonRender/code/include/loaders/: fontLoader.h  ft2build.h  imageLoader.h  modelLoader.h  textureLoader.h
VS/horizonRender/code/include/main/: main_render.h  (+1 more)
VS/horizonRender/shaders/: basic.vert
VS/horizonResource/: CMakeLists.txt  horizonResource.vcxproj  horizonResource.vcxproj.filters
VS/horizonUtil/: CMakeLists.txt  horizonUtil.vcxproj  horizonUtil.vcxproj.filters
(+2979 files in other folders)
